# pytest-orisa

./: README.md  pyproject.toml
src/pytest_orisa/: app.py  cache.py  domain.py  event_dispatcher.py  orisa.tcss  plugin.py  version.py
src/pytest_orisa/components/: code.py  collection.py  flags.py  footer.py  header.py  result.py  runbar.py
