[tool.poetry]
name = "pytest-orisa"
version = "0.1.0"
description = ""
authors = ["Dan Claudiu Pop <danclaudiupop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.74.0"
pytest = "^8.3.2"
platformdirs = "^4.2.2"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."pytest11"]
pytest-orisa = "pytest_orisa.plugin"