[project]
name = "pytest-orisa"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Dan Claudiu Pop", email = "danclaudiupop@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["tui", "terminal", "pytest", "testing", "textual", "cli", "orisa", "developer-tool"]
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pytest>=8.3.3",
    "textual>=0.79.1",
    "platformdirs>=4.3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "textual-dev>=1.6.1",
]

[project.entry-points.pytest11]
pytest-orisa = "pytest_orisa.plugin"
